--- a/serverless.yml
+++ b/serverless.yml
@@ -94,8 +94,9 @@ resources:
           -
             AttributeName: id
             KeyType: HASH
-        ProvisionedThroughput:
-          ReadCapacityUnits: 1
-          WriteCapacityUnits: 1
+        #ProvisionedThroughput:
+        #  ReadCapacityUnits: 1
+        #  WriteCapacityUnits: 1
+        BillingMode: PAY_PER_REQUEST
         TableName: 'todos'
 
